--- a/author.html
+++ b/author.html
@@ -66,12 +66,10 @@
                 <hr />
                 <p>&nbsp;</p>
 
-                <p><img width="300px" src="images/author.jpg" alt="Photo of the Author" /></p>
-<p>The Apollo Space Junk Bot Flock is authored by Charles Reid.</p>
-<p>Charles is a chemical engineer who tinkers with Python in his free time.</p>
+                <p><img width="300px" src="https://avatars3.githubusercontent.com/u/368075?v=3&s=460" alt="apollo 12 photo" /></p>
+<p>Asmodeus is authored by Charles, a chemical engineer who tinkers with Python in his free time.</p>
 <p>Visit <a href="http://charlesreid1.com">charlesreid1.com</a></p>
 <p>Visit <a href="http://github.com/charlesreid1">@charlesreid1 on Github</a></p>
-<p>Visit the <a href="http://charlesreid1.github.io/">charlesreid1 Octopress blog on Github</a></p>
             </div>
         </div>
     </div>
