--- a/author.html
+++ b/author.html
@@ -66,7 +66,7 @@
                 <hr />
                 <p>&nbsp;</p>
 
-                <p>Asmodeus is authored by Charles, a chemical engineer who tinkers with Python in his free time.</p>
+                <p>Asmodeus is authored by Charles, a chemical engineer who tinkers with Python in his free time.&lt;</p>
 <p>Visit <a href="http://charlesreid1.com">charlesreid1.com</a></p>
 <p>Visit <a href="http://github.com/charlesreid1">@charlesreid1 on Github</a></p>
             </div>
