"this is an automated commit."

--- a/author.html
+++ b/author.html
@@ -13,17 +13,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-      <link href="/favicon.png" rel="icon">
+      <link href="/asmodeus/favicon.png" rel="icon">
 
 
 
     <!--
     my CSS styles
     -->
-    <link href="/theme/css/bootstrap.css"       rel="stylesheet" type="text/css">
-    <link href="/theme/css/darkly.css"          rel="stylesheet" type="text/css"/>
-    <link href="/theme/css/navbar.css"          rel="stylesheet" type="text/css"/>
-    <link href="/theme/css/main.css"            rel="stylesheet" type="text/css"/>
+    <link href="/asmodeus/theme/css/bootstrap.css"       rel="stylesheet" type="text/css">
+    <link href="/asmodeus/theme/css/darkly.css"          rel="stylesheet" type="text/css"/>
+    <link href="/asmodeus/theme/css/navbar.css"          rel="stylesheet" type="text/css"/>
+    <link href="/asmodeus/theme/css/main.css"            rel="stylesheet" type="text/css"/>
 
 
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
     <link href="//fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic"
           rel="stylesheet" type="text/css"/>
 
-    <link href="/theme/css/pygment.css" rel="stylesheet" type="text/css"/>
+    <link href="/asmodeus/theme/css/pygment.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
@@ -94,8 +94,8 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<script src="/theme/js/jquery.min.js"></script>
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="/asmodeus/theme/js/jquery.min.js"></script>
+<script src="/asmodeus/theme/js/bootstrap.min.js"></script>
 
 </body>
 </html>
